Kubefile/ms3-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms3-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms3app
  template:
    metadata:
      labels:
        app: ms3app
    spec:
      containers:
      - name: ms3app
        image: prem4eru/microservice3:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3002
