Kubefile/ms1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ms1app
spec:
  selector:
    app: ms1app
  ports:
  - port: 3000
    targetPort: 3000
