Kubefile/ms3-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ms3app
spec:
  selector:
    app: ms3app
  ports:
  - port: 3002
    targetPort: 3002
